--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     function acceptCookies() {
       localStorage.setItem('cookiesAccepted', 'true');
       console.log('Cookies aceitos');
-      window.location.href = 'https://loja.humanhealthfit.info/';
+      window.location.href = 'https://loja.duxhumanhealthfit.info/';
     }
 
     function rejectCookies() {
